--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "git+https://github.com/moveo-ai/integration-guides.git"
   },
   "author": "Môveo.AI",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/moveo-ai/integration-guides/issues"
   },
@@ -34,74 +34,74 @@
     "@pagerduty/pdjs": "2.2.4",
     "@react-google-maps/api": "2.7.0",
     "@sendgrid/mail": "7.6.0",
-    "algoliasearch": "4.11.0",
-    "autoprefixer": "10.4.0",
-    "axios": "0.24.0",
+    "algoliasearch": "^4.12.1",
+    "autoprefixer": "^10.4.2",
+    "axios": "^0.25.0",
     "axios-cache-adapter": "2.7.3",
     "axios-retry": "3.2.4",
     "crypto-js": "4.1.1",
-    "dotenv": "10.0.0",
-    "googleapis": "92.0.0",
+    "dotenv": "^15.0.0",
+    "googleapis": "^94.0.0",
     "https-proxy-agent": "5.0.0",
     "jsonwebtoken": "8.5.1",
     "lodash.get": "4.4.2",
     "lru-cache": "6.0.0",
     "moment": "2.29.1",
     "moment-timezone": "0.5.34",
-    "next": "12.0.7",
+    "next": "^12.0.10",
     "node-rsa": "1.1.1",
     "papaparse": "5.3.1",
     "pino": "6.13.3",
-    "pino-http": "6.4.0",
-    "pino-pretty": "7.3.0",
+    "pino-http": "^6.6.0",
+    "pino-pretty": "^7.5.1",
     "postcss-css-variables": "0.18.0",
     "postcss-import": "14.0.2",
-    "postcss-preset-env": "7.0.1",
-    "prop-types": "15.7.2",
+    "postcss-preset-env": "^7.3.0",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
-    "react-datepicker": "4.5.0",
+    "react-datepicker": "^4.6.0",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.22.2",
+    "react-hook-form": "^7.25.3",
     "soap": "0.43.0",
-    "swr": "1.1.1",
+    "swr": "^1.2.0",
     "tailwindcss": "^2.2.19",
     "url-join": "4.0.1",
     "uuid": "8.3.2",
     "yup": "0.32.11"
   },
   "devDependencies": {
-    "@commitlint/cli": "15.0.0",
-    "@commitlint/config-conventional": "15.0.0",
-    "@next/eslint-plugin-next": "12.0.7",
-    "@testing-library/dom": "8.11.1",
+    "@commitlint/cli": "^16.1.0",
+    "@commitlint/config-conventional": "^16.0.0",
+    "@next/eslint-plugin-next": "^12.0.10",
+    "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
-    "@types/jsonwebtoken": "8.5.6",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/lru-cache": "5.1.1",
     "@types/node-rsa": "1.1.1",
     "@types/pino": "7.0.5",
-    "@types/uuid": "8.3.3",
-    "@typescript-eslint/eslint-plugin": "5.7.0",
-    "@typescript-eslint/parser": "5.7.0",
-    "babel-jest": "27.4.5",
-    "command-line-args": "5.2.0",
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "babel-jest": "^27.4.6",
+    "command-line-args": "^5.2.1",
+    "eslint": "^8.8.0",
+    "eslint-config-next": "^12.0.10",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-jest": "25.3.0",
+    "eslint-plugin-jest": "^26.0.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
     "is-base64": "1.1.0",
-    "jest": "27.4.5",
-    "lint-staged": "12.1.2",
-    "msw": "0.36.3",
-    "nock": "13.2.1",
+    "jest": "^27.4.7",
+    "lint-staged": "^12.3.3",
+    "msw": "^0.36.8",
+    "nock": "^13.2.2",
     "prettier": "2.5.1",
     "prettier-plugin-organize-imports": "2.3.4",
     "react-test-renderer": "17.0.2",
-    "typescript": "4.5.4"
+    "typescript": "^4.5.5"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
