--- a/package.json
+++ b/package.json
@@ -27,54 +27,54 @@
   "dependencies": {
     "@date-io/date-fns": "1.3.13",
     "@fullhuman/postcss-purgecss": "4.1.3",
-    "@hookform/resolvers": "2.8.5",
+    "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "4.12.3",
     "@material-ui/pickers": "3.3.10",
     "@material-ui/styles": "4.11.4",
     "@pagerduty/pdjs": "2.2.4",
     "@react-google-maps/api": "2.7.0",
-    "@sendgrid/mail": "7.6.0",
-    "algoliasearch": "^4.12.1",
-    "autoprefixer": "^10.4.2",
-    "axios": "^0.25.0",
+    "@sendgrid/mail": "^7.6.2",
+    "algoliasearch": "^4.13.0",
+    "autoprefixer": "^10.4.4",
+    "axios": "^0.26.1",
     "axios-cache-adapter": "2.7.3",
     "axios-retry": "3.2.4",
     "crypto-js": "4.1.1",
-    "dotenv": "^15.0.0",
-    "googleapis": "^94.0.0",
+    "dotenv": "^16.0.0",
+    "googleapis": "^100.0.0",
     "https-proxy-agent": "5.0.0",
     "jsonwebtoken": "8.5.1",
     "lodash.get": "4.4.2",
     "lru-cache": "6.0.0",
     "moment": "2.29.1",
     "moment-timezone": "0.5.34",
-    "next": "^12.0.10",
+    "next": "^12.1.4",
     "node-rsa": "1.1.1",
-    "papaparse": "5.3.1",
+    "papaparse": "^5.3.2",
     "pino": "6.13.3",
     "pino-http": "^6.6.0",
-    "pino-pretty": "^7.5.1",
+    "pino-pretty": "^7.6.0",
     "postcss-css-variables": "0.18.0",
-    "postcss-import": "14.0.2",
-    "postcss-preset-env": "^7.3.0",
+    "postcss-import": "^14.1.0",
+    "postcss-preset-env": "^7.4.3",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
-    "react-datepicker": "^4.6.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.25.3",
+    "react-hook-form": "^7.29.0",
     "soap": "0.43.0",
-    "swr": "^1.2.0",
+    "swr": "^1.2.2",
     "tailwindcss": "^2.2.19",
     "url-join": "4.0.1",
     "uuid": "8.3.2",
     "yup": "0.32.11"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.1.0",
-    "@commitlint/config-conventional": "^16.0.0",
-    "@next/eslint-plugin-next": "^12.0.10",
-    "@testing-library/dom": "^8.11.3",
-    "@testing-library/jest-dom": "5.16.1",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@next/eslint-plugin-next": "^12.1.4",
+    "@testing-library/dom": "^8.12.0",
+    "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jsonwebtoken": "^8.5.8",
@@ -82,26 +82,26 @@
     "@types/node-rsa": "1.1.1",
     "@types/pino": "7.0.5",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
-    "babel-jest": "^27.4.6",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "babel-jest": "^27.5.1",
     "command-line-args": "^5.2.1",
-    "eslint": "^8.8.0",
-    "eslint-config-next": "^12.0.10",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-jest": "^26.0.0",
-    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint": "^8.12.0",
+    "eslint-config-next": "^12.1.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.1.3",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
     "is-base64": "1.1.0",
-    "jest": "^27.4.7",
-    "lint-staged": "^12.3.3",
-    "msw": "^0.36.8",
-    "nock": "^13.2.2",
-    "prettier": "2.5.1",
+    "jest": "^27.5.1",
+    "lint-staged": "^12.3.7",
+    "msw": "^0.39.2",
+    "nock": "^13.2.4",
+    "prettier": "^2.6.1",
     "prettier-plugin-organize-imports": "2.3.4",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.3"
   },
   "release": {
     "branches": [
