--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "lru-cache": "6.0.0",
     "moment": "2.29.1",
     "moment-timezone": "0.5.34",
-    "next": "^12.1.4",
+    "next": "^12.1.5",
     "node-rsa": "1.1.1",
     "papaparse": "^5.3.2",
     "pino": "6.13.3",
@@ -58,6 +58,7 @@
     "postcss-import": "^14.1.0",
     "postcss-preset-env": "^7.4.3",
     "prop-types": "^15.8.1",
+    "raw-body": "^2.5.1",
     "react": "17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "17.0.2",
