--- a/package.json
+++ b/package.json
@@ -27,28 +27,28 @@
   "dependencies": {
     "@date-io/date-fns": "1.3.13",
     "@fullhuman/postcss-purgecss": "4.1.3",
-    "@hookform/resolvers": "^2.8.8",
-    "@material-ui/core": "4.12.3",
+    "@hookform/resolvers": "^2.9.1",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "3.3.10",
-    "@material-ui/styles": "4.11.4",
+    "@material-ui/styles": "^4.11.5",
     "@pagerduty/pdjs": "2.2.4",
-    "@react-google-maps/api": "2.7.0",
-    "@sendgrid/mail": "^7.6.2",
-    "algoliasearch": "^4.13.0",
-    "autoprefixer": "^10.4.4",
-    "axios": "^0.26.1",
+    "@react-google-maps/api": "^2.12.0",
+    "@sendgrid/mail": "^7.7.0",
+    "algoliasearch": "^4.13.1",
+    "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "axios-cache-adapter": "2.7.3",
-    "axios-retry": "3.2.4",
+    "axios-retry": "^3.2.5",
     "crypto-js": "4.1.1",
-    "dotenv": "^16.0.0",
-    "googleapis": "^100.0.0",
-    "https-proxy-agent": "5.0.0",
+    "dotenv": "^16.0.1",
+    "googleapis": "^101.0.0",
+    "https-proxy-agent": "^5.0.1",
     "jsonwebtoken": "8.5.1",
     "lodash.get": "4.4.2",
     "lru-cache": "6.0.0",
-    "moment": "2.29.1",
+    "moment": "^2.29.3",
     "moment-timezone": "0.5.34",
-    "next": "^12.1.5",
+    "next": "^12.1.6",
     "node-rsa": "1.1.1",
     "papaparse": "^5.3.2",
     "pino": "6.13.3",
@@ -56,26 +56,26 @@
     "pino-pretty": "^7.6.0",
     "postcss-css-variables": "0.18.0",
     "postcss-import": "^14.1.0",
-    "postcss-preset-env": "^7.4.3",
+    "postcss-preset-env": "^7.7.1",
     "prop-types": "^15.8.1",
     "raw-body": "^2.5.1",
     "react": "17.0.2",
-    "react-datepicker": "^4.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.29.0",
-    "soap": "0.43.0",
-    "swr": "^1.2.2",
+    "react-hook-form": "^7.32.0",
+    "soap": "^0.44.0",
+    "swr": "^1.3.0",
     "tailwindcss": "^2.2.19",
     "url-join": "4.0.1",
     "uuid": "8.3.2",
     "yup": "0.32.11"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@next/eslint-plugin-next": "^12.1.4",
-    "@testing-library/dom": "^8.12.0",
-    "@testing-library/jest-dom": "^5.16.3",
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
+    "@next/eslint-plugin-next": "^12.1.6",
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jsonwebtoken": "^8.5.8",
@@ -83,26 +83,26 @@
     "@types/node-rsa": "1.1.1",
     "@types/pino": "7.0.5",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "babel-jest": "^27.5.1",
     "command-line-args": "^5.2.1",
-    "eslint": "^8.12.0",
-    "eslint-config-next": "^12.1.4",
+    "eslint": "^8.17.0",
+    "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^26.1.3",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "husky": "7.0.4",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": "^8.0.1",
     "identity-obj-proxy": "3.0.0",
     "is-base64": "1.1.0",
     "jest": "^27.5.1",
-    "lint-staged": "^12.3.7",
-    "msw": "^0.39.2",
-    "nock": "^13.2.4",
-    "prettier": "^2.6.1",
+    "lint-staged": "^13.0.1",
+    "msw": "^0.42.1",
+    "nock": "^13.2.6",
+    "prettier": "^2.6.2",
     "prettier-plugin-organize-imports": "2.3.4",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.6.3"
+    "typescript": "^4.7.3"
   },
   "release": {
     "branches": [
