--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 2,
+  "arrowParens": "always",
+  "organizeImportsSkipDestructiveCodeActions": true,
+  "printWidth": 80,
   "semi": true,
   "singleQuote": true,
-  "printWidth": 80,
-  "arrowParens": "always"
+  "tabWidth": 2,
+  "trailingComma": "es5"
 }
