--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/moveo-ai/integration-guides#readme",
   "dependencies": {
+    "@emotion/server": "^11.10.0",
     "@hookform/resolvers": "^2.9.10",
     "axios": "^0.27.2",
     "axios-retry": "^3.3.1",
@@ -43,8 +44,8 @@
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@mui/material": "^5.10.10",
     "@mui/styles": "^5.10.10",
@@ -60,6 +61,7 @@
     "@typescript-eslint/parser": "^5.40.1",
     "autoprefixer": "^10.4.12",
     "babel-jest": "^27.5.1",
+    "classnames": "^2.3.2",
     "command-line-args": "^5.2.1",
     "eslint": "^8.26.0",
     "eslint-config-next": "^12.3.1",
@@ -67,11 +69,13 @@
     "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
+    "i18next": "^22.4.9",
     "identity-obj-proxy": "3.0.0",
     "jest": "^27.5.1",
     "lint-staged": "^13.0.3",
     "lodash": "^4.17.21",
     "msw": "^0.42.1",
+    "ni18n": "^1.0.5",
     "nock": "^13.2.9",
     "postcss-css-variables": "0.18.0",
     "postcss-import": "^15.0.0",
@@ -82,6 +86,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
+    "react-i18next": "^12.1.4",
+    "sass": "^1.58.2",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.7.3"
   },
