--- a/package.json
+++ b/package.json
@@ -25,71 +25,67 @@
   },
   "homepage": "https://github.com/moveo-ai/integration-guides#readme",
   "dependencies": {
-    "@emotion/server": "^11.10.0",
-    "@hookform/resolvers": "^2.9.10",
-    "axios": "^0.27.2",
-    "axios-retry": "^3.3.1",
-    "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
-    "jsonwebtoken": "8.5.1",
-    "lru-cache": "^7.14.0",
+    "@emotion/server": "^11.11.0",
+    "@hookform/resolvers": "^3.1.1",
+    "axios": "^1.4.0",
+    "axios-retry": "^3.5.1",
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "9.0.1",
+    "lru-cache": "^10.0.0",
     "moment": "^2.29.4",
-    "next": "^12.3.1",
-    "pino": "^8.7.0",
-    "raw-body": "^2.5.1",
-    "swr": "^1.3.0",
-    "uuid": "8.3.2",
-    "yup": "0.32.11"
+    "next": "^13.4.12",
+    "pino": "^8.14.1",
+    "raw-body": "^2.5.2",
+    "swr": "^2.2.0",
+    "uuid": "9.0.0",
+    "yup": "1.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fullhuman/postcss-purgecss": "^5.0.0",
-    "@mui/material": "^5.10.10",
-    "@mui/styles": "^5.10.10",
-    "@next/eslint-plugin-next": "^12.3.1",
-    "@testing-library/dom": "^8.19.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/lru-cache": "^7.10.10",
-    "@types/pino": "7.0.5",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
-    "autoprefixer": "^10.4.12",
-    "babel-jest": "^27.5.1",
+    "@mui/material": "^5.14.1",
+    "@next/eslint-plugin-next": "^13.4.12",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "autoprefixer": "^10.4.14",
+    "babel-jest": "^29.6.1",
     "classnames": "^2.3.2",
-    "command-line-args": "^5.2.1",
-    "eslint": "^8.26.0",
-    "eslint-config-next": "^12.3.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^26.5.3",
+    "eslint": "^8.45.0",
+    "eslint-config-next": "^13.4.12",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.1",
-    "i18next": "^22.4.9",
+    "husky": "^8.0.3",
+    "i18next": "^23.2.11",
     "identity-obj-proxy": "3.0.0",
-    "jest": "^27.5.1",
-    "lint-staged": "^13.0.3",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
+    "lint-staged": "^13.2.3",
     "lodash": "^4.17.21",
-    "msw": "^0.42.1",
-    "ni18n": "^1.0.5",
-    "nock": "^13.2.9",
-    "postcss-css-variables": "0.18.0",
-    "postcss-import": "^15.0.0",
-    "postcss-preset-env": "^7.8.2",
-    "prettier": "^2.7.1",
-    "prettier-plugin-organize-imports": "^3.1.1",
+    "msw": "^1.2.3",
+    "ni18n": "^1.1.0",
+    "nock": "^13.3.2",
+    "postcss-css-variables": "0.19.0",
+    "postcss-import": "^15.1.0",
+    "postcss-preset-env": "^9.0.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-organize-imports": "^3.2.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.38.0",
-    "react-i18next": "^12.1.4",
-    "sass": "^1.58.2",
+    "react-hook-form": "^7.45.2",
+    "react-i18next": "^13.0.2",
+    "sass": "^1.64.0",
     "tailwindcss": "^2.2.19",
-    "typescript": "^4.7.3"
+    "typescript": "^5.1.6"
   },
   "release": {
     "branches": [
