--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:fix": "npm run lint -- --fix",
     "prettier": "prettier --write './**/*.{js,ts,tsx}'",
     "test": "TZ=UTC jest --ci",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -26,66 +27,68 @@
   "homepage": "https://github.com/moveo-ai/integration-guides#readme",
   "dependencies": {
     "@emotion/server": "^11.11.0",
-    "@hookform/resolvers": "^3.1.1",
-    "axios": "^1.4.0",
-    "axios-retry": "^3.5.1",
-    "dotenv": "^16.3.1",
-    "jsonwebtoken": "9.0.1",
-    "lru-cache": "^10.0.0",
-    "moment": "^2.29.4",
-    "next": "^13.4.12",
-    "pino": "^8.14.1",
+    "@hookform/resolvers": "^3.4.0",
+    "axios": "^1.6.8",
+    "axios-retry": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^10.2.2",
+    "moment": "^2.30.1",
+    "next": "^13.5.6",
+    "pino": "^9.1.0",
     "raw-body": "^2.5.2",
-    "swr": "^2.2.0",
-    "uuid": "9.0.0",
-    "yup": "1.2.0"
+    "swr": "^2.2.5",
+    "uuid": "^9.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.7",
-    "@commitlint/config-conventional": "^17.6.7",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fullhuman/postcss-purgecss": "^5.0.0",
-    "@mui/material": "^5.14.1",
-    "@next/eslint-plugin-next": "^13.4.12",
-    "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0",
-    "autoprefixer": "^10.4.14",
-    "babel-jest": "^29.6.1",
-    "classnames": "^2.3.2",
-    "eslint": "^8.45.0",
-    "eslint-config-next": "^13.4.12",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
-    "i18next": "^23.2.11",
+    "@fullhuman/postcss-purgecss": "^6.0.0",
+    "@mui/material": "^5.15.18",
+    "@next/eslint-plugin-next": "^13.5.6",
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "autoprefixer": "^10.4.19",
+    "babel-jest": "^29.7.0",
+    "classnames": "^2.5.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^13.5.6",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.5.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "husky": "^9.0.11",
+    "i18next": "^23.11.4",
     "identity-obj-proxy": "3.0.0",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.1",
-    "lint-staged": "^13.2.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.2",
     "lodash": "^4.17.21",
-    "msw": "^1.2.3",
+    "msw": "^2.3.0",
     "ni18n": "^1.1.0",
-    "nock": "^13.3.2",
+    "nock": "^13.5.4",
     "postcss-css-variables": "0.19.0",
-    "postcss-import": "^15.1.0",
-    "postcss-preset-env": "^9.0.0",
-    "prettier": "^3.0.0",
-    "prettier-plugin-organize-imports": "^3.2.3",
+    "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^9.5.13",
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.2",
-    "react-i18next": "^13.0.2",
-    "sass": "^1.64.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.4",
+    "react-i18next": "^14.1.1",
+    "sass": "^1.77.2",
     "tailwindcss": "^2.2.19",
-    "typescript": "^5.1.6"
+    "typescript": "^5.4.5",
+    "undici": "^6.17.0"
   },
   "release": {
     "branches": [
