--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,11 @@
     "react-hooks/exhaustive-deps": "warn",
     "react/no-unknown-property": [2, { "ignore": ["jsx", "global"] }],
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      { "argsIgnorePattern": "^_" }
+    ],
+
     "no-console": "warn"
   }
 }
